issue 수정